--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -3,47 +3,31 @@ name: iOS Build
 on:
   push:
     branches:
-      - main  # Runs when code is pushed to main
-  pull_request:
+      - main
 
 jobs:
   build_ios:
-    runs-on: macos-latest  # Use macOS virtual machine
-
+    runs-on: macos-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set Up Flutter
+      - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.13.0  # Change if needed
+          flutter-version: 3.13.0 # Update this to match your Flutter version
 
       - name: Install Dependencies
         run: flutter pub get
 
-      - name: Build iOS App (Without Code Signing)
+      - name: Enable iOS
+        run: flutter config --enable-ios
+
+      - name: Build iOS
         run: flutter build ios --no-codesign
 
-      - name: Archive iOS App
-        run: |
-          mkdir -p build/ios/ipa
-          xcodebuild -workspace ios/Runner.xcworkspace \
-                     -scheme Runner \
-                     -sdk iphoneos \
-                     -configuration Release \
-                     -archivePath build/ios/archive.xcarchive \
-                     archive
-
-      - name: Export IPA (Unsigned)
-        run: |
-          xcodebuild -exportArchive \
-                     -archivePath build/ios/archive.xcarchive \
-                     -exportOptionsPlist ios/exportOptions.plist \
-                     -exportPath build/ios/ipa
-
-      - name: Upload IPA as Artifact
+      - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: ios-app
-          path: build/ios/ipa
+          name: ios-build
+          path: build/ios/iphoneos/
